# capstone-drone-project

./: .gitignore
YOLO_pkg/: GrabVideo.py  GrabVideoSims.py
install/: local_setup.sh  setup.sh
install/gps_approx_pkg/share/gps_approx_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gps_approx_pkg/share/gps_approx_pkg/cmake/: gps_approx_pkgConfig.cmake
install/gst_publisher_pkg/lib/gst_publisher_pkg/: gst_node
install/gst_publisher_pkg/share/gst_publisher_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gst_publisher_pkg/share/gst_publisher_pkg/cmake/: gst_publisher_pkgConfig.cmake
install/pixel_msgs/share/pixel_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pixel_msgs/share/pixel_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_pixel_msgs__rosidl_generator_cExport-noconfig.cmake  export_pixel_msgs__rosidl_generator_cppExport.cmake  export_pixel_msgs__rosidl_generator_pyExport-noconfig.cmake  export_pixel_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  pixel_msgs__rosidl_typesupport_cppExport-noconfig.cmake  pixel_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  pixel_msgs__rosidl_typesupport_introspection_cExport.cmake  (+1 more)
install/px4_msgs/share/px4_msgs/: package.sh
log/: latest_build
ros2_ws/src/gps_approx_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/gps_approx_pkg/src/: CalcGPSNode.cpp
ros2_ws/src/gst_publisher_pkg/: CMakeLists.txt
ros2_ws/src/gst_publisher_pkg/src/: gst_node.cpp
(+14 files in other folders)
